# netsim-zpo-grupa-26

./: CMakeLists.txt  main.cpp
include/: factory.hpp  helpers.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp  types.cpp
test/: global_functions_mock.hpp  main_gtest.cpp  net_test.cpp  nodes_mocks.hpp  test_nodes.cpp  test_package.cpp
